# Ethertum-

./: .gitignore  Cargo.toml  LEARNING.md  README.md  build_check_output.txt  build_check_output_ascii.txt  build_check_output_fix_cycle.txt  build_check_output_inventorysync.txt  build_check_output_inventorysync2.txt  build_check_output_inventorysync3.txt  build_check_output_touch.txt  build_check_output_touch2.txt  build_check_output_touch_share.txt  device_log.txt  draw_gamepad_diagram_excerpt.rs  eth_debug.txt  recent_log.txt  recent_log_device.txt  recent_log_device2.txt  recent_log_device_utf8.txt  task_summary.json  tombstone_13  tombstone_14  tombstone_19
.cargo/: config.toml
.github/workflows/: android-build.yml  android-release.yml  build_android_apk.yml  build_android_release.yml  build_ios_release.yml  build_linux_release.yml  build_macos_release.yml  build_wasm_release.yml  build_windows_release.yml
assets/shaders/: foliage.wgsl  liquid.wgsl  terrain.wgsl
assets/ui/touch_main_menu_tiles/: README.txt
assets/ui/worldgen_option_icons/: manifest.generated.json  manifest.generated.md  manifest.json  manifest.md
crates/mobile/: Cargo.toml
crates/mobile/src/: lib.rs
docs/: TOC.md
docs/annotated/: chunk_explained.md  chunk_storage_template.md  voxel_server_template.md  worldgen_template.md
docs/learning/: planet_gravity_for_non_coders.md  rust_basics.md
scripts/: copy_apk.ps1  fetch_worldgen_option_icons.ps1  generate_worldgen_option_icons.ps1
src/client/: character_controller.rs  client_world.rs  game_client.rs  input.rs  l10n.rs  mod.rs  settings.rs
src/client/ddgi/: ddgi1_plugin.rs
src/client/editor/: mod.rs
src/client/ui/: debug.rs  hud.rs  interactive_resize.rs  items.rs  main_menu.rs  mod.rs  resize_minigame.rs  serverlist.rs  settings.rs
src/item/: mod.rs
src/net/: mod.rs  netproc_client.rs  netproc_server.rs  packet.rs
src/server/: dedicated_server.rs  integrated_server.rs
src/util/: mod.rs  vertexbuffer.rs  wfc.rs
src/voxel/: chunk.rs  chunk_storage.rs  lighting.rs  meshgen.rs  mod.rs  render.rs  vox.rs  voxel_client.rs  voxel_server.rs  worldgen.rs  worldgen_compute.wgsl  worldgen_gpu.rs
