[package]
name = "ethertia"
version = "0.2.8"
edition = "2021"
default-run = "ethertia"

[features]
default = ["target_native_os"]
target_native_os = [
    "bevy/bevy_solari",
    "dep:bevy_atmosphere",
    "dep:bevy-inspector-egui",
    "dep:native-dialog",
    "dep:memory-stats",
    "dep:sysinfo",
    #"reqwest?/blocking",
]
target_web = []
experimental_channel = []
ddgi = []
ddgi2 = []


[dev-dependencies]
bevy = { version = "0.17.2", features = ["dynamic_linking", "bevy_solari", "jpeg"] }
# cargo run --features bevy/trace_tracy


[dependencies]
bevy = { version = "0.17.2", default-features = false, features = ["android-native-activity","android_shared_stdcxx","animation","async_executor","bevy_animation","bevy_anti_alias","bevy_asset","bevy_audio","bevy_camera","bevy_color","bevy_core_pipeline","bevy_gilrs","bevy_gizmos","bevy_gltf","bevy_image","bevy_input_focus","bevy_light","bevy_log","bevy_mesh","bevy_mesh_picking_backend","bevy_pbr","bevy_picking","bevy_post_process","bevy_render","bevy_scene","bevy_shader","bevy_solari","bevy_sprite","bevy_sprite_picking_backend","bevy_sprite_render","bevy_state","bevy_text","bevy_ui","bevy_ui_render","bevy_window","bevy_winit","custom_cursor","default_font","hdr","jpeg","ktx2","multi_threaded","png","reflect_auto_register","smaa_luts","sysinfo_plugin","tonemapping_luts","vorbis","webgl2","x11","wayland","zstd_rust"] }
blake3 = { version = "1.5.1", features = ["pure"] }
avian3d = "0.4.1"
bevy_renet = "3.0"
# bevy_fps_controller = "0.2.3"
# bevy_rapier3d = "0.23"

bevy_egui = "0.38"
bevy-inspector-egui = { version = "0.34", optional = true }
egui_extras = { version = "0.33", default-features = false, features = [] }
egui-notify = "0.21"
egui_dock = "0.18"
leafwing-input-manager = { version = "0.18" }
bevy_touch_stick = "0.2"
bevy_atmosphere = { version = "0.13", optional = true }
bevy_common_assets = { version = "0.14", features = ["json"] }
bevy_obj = "0.17"
noise = "0.9"
bincode = "1.3"
serde = "1.0"
serde_json = "1.0" 
image = "0.25"  # for atlas gen
tiny_http = "0.12"  # for RCON http server
half ="2.7"
bytemuck = { version = "1.23", features = ["derive"] }
wgpu = "26.0.1"
thread_local = "1.1"
once_cell = "1.19"
futures-lite = "2.0.1"  # async poll task
sysinfo = { version = "0.37", optional = true }
native-dialog = { version = "0.9", optional = true }
memory-stats = { version = "1.2", optional = true }
log = "0.4.20"
env_logger = "0.11"
chrono = "0.4"
anyhow = "1.0"  # error handling
human_bytes = "0.4"
rand = "0.9"
instant = "0.1"
crossbeam-channel = "0.5"
shlex = "1.3"
bit-set = "0.8"
[target.'cfg(all(not(target_arch = "wasm32"), not(target_os = "android")))'.dependencies]
reqwest = { version = "0.12", default-features = false, features = ["json", "blocking", "rustls-tls"] }
[target.'cfg(target_os = "android")'.dependencies]
android-activity = { version = "0.6.0", default-features = false, features = ["native-activity"] }
bevy = { version = "0.17.2", default-features = false, features = ["android-native-activity", "jpeg"] }

[target.'cfg(target_arch = "wasm32")'.dev-dependencies]
wasm-bindgen-test = "0.3"

#bevy_egui = { git = "https://github.com/okkmnone/bevy_egui.git", branch = "v0.24.0.tmpfix", default-features = false, features = ["open_url", "default_fonts"] }
#bevy-inspector-egui = { git = "https://github.com/okkmnone/bevy-inspector-egui.git", branch = "v0.22.1.fix" }






[workspace]
resolver = "2" # Important! wgpu/bevy needs this!
members = ["crates/*"]

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

# further improve performances in a noticeable way, even for a release build (though the build itself will take longer to complete):
[profile.release]
lto = true
codegen-units = 1
strip = true
# opt-level = "z"  # "z"=34.4 MB, zip=9.25 MB


# cargo build --target wasm32-unknown-unknown --profile web-release
[profile.web-release]
inherits = "release"
opt-level = "z"  # default=39.2mb, "z"=17.3mb, 

[profile.android-debug]
inherits = "dev"
opt-level = 1

[profile.android-release]
inherits = "release"
opt-level = 3
