[package]
name = "mobile"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "mobile"
crate-type = ["staticlib", "cdylib"]

[dependencies]
bevy = { version = "0.17", default-features = false, features = [
    "android-native-activity",
    "android_shared_stdcxx",
    "animation",
    "async_executor",
    "bevy_animation",
    "bevy_anti_alias",
    "bevy_asset",
    "bevy_audio",
    "bevy_camera",
    "bevy_color",
    "bevy_core_pipeline",
    "bevy_gilrs",
    "bevy_gizmos",
    "bevy_gltf",
    "bevy_image",
    "bevy_input_focus",
    "bevy_light",
    "bevy_log",
    "bevy_mesh",
    "bevy_mesh_picking_backend",
    "bevy_pbr",
    "bevy_picking",
    "bevy_post_process",
    "bevy_render",
    "bevy_scene",
    "bevy_shader",
    "bevy_solari",
    "bevy_sprite",
    "bevy_sprite_picking_backend",
    "bevy_sprite_render",
    "bevy_state",
    "bevy_text",
    "bevy_ui",
    "bevy_ui_render",
    "bevy_window",
    "bevy_winit",
    "custom_cursor",
    "default_font",
    "hdr",
    "jpeg",
    "ktx2",
    "multi_threaded",
    "png",
    "reflect_auto_register",
    "smaa_luts",
    "sysinfo_plugin",
    "tonemapping_luts",
    "vorbis",
    "webgl2",
    "x11",
    "wayland",
    "zstd_rust"
] }
ethertia = { path = "../..", default-features = false }

[target.'cfg(target_os = "android")'.dependencies]
bevy = { version = "0.17", default-features = false, features = [
    "android-native-activity",
    "android_shared_stdcxx",
    "animation",
    "async_executor",
    "bevy_animation",
    "bevy_anti_alias",
    "bevy_asset",
    "bevy_audio",
    "bevy_camera",
    "bevy_color",
    "bevy_core_pipeline",
    "bevy_gilrs",
    "bevy_gizmos",
    "bevy_gltf",
    "bevy_image",
    "bevy_input_focus",
    "bevy_light",
    "bevy_log",
    "bevy_mesh",
    "bevy_mesh_picking_backend",
    "bevy_pbr",
    "bevy_picking",
    "bevy_post_process",
    "bevy_render",
    "bevy_scene",
    "bevy_shader",
    "bevy_solari",
    "bevy_sprite",
    "bevy_sprite_picking_backend",
    "bevy_sprite_render",
    "bevy_state",
    "bevy_text",
    "bevy_ui",
    "bevy_ui_render",
    "bevy_window",
    "bevy_winit",
    "custom_cursor",
    "default_font",
    "hdr",
    "jpeg",
    "ktx2",
    "multi_threaded",
    "png",
    "reflect_auto_register",
    "smaa_luts",
    "sysinfo_plugin",
    "tonemapping_luts",
    "vorbis",
    "webgl2",
    "x11",
    "wayland",
    "zstd_rust"
] }

[package.metadata.android]
package = "com.ethertia.client"
build_targets = ["aarch64-linux-android", "x86_64-linux-android"]
resources = "../../build/android/res"
assets = "../../assets"
apk_name = "ethertia"
strip = "strip"

[package.metadata.android.signing.android-debug]
path = "../../../../../.android/debug.keystore"
keystore_password = "android"

[package.metadata.android.sdk]
min_sdk_version = 24
target_sdk_version = 36
#max_sdk_version = 33

[[package.metadata.android.uses_permission]]
name = "android.permission.INTERNET"

[[package.metadata.android.uses_permission]]
name = "android.permission.ACCESS_NETWORK_STATE"

[[package.metadata.android.uses_permission]]
name = "android.permission.POST_NOTIFICATIONS"

[[package.metadata.android.uses_permission]]
name = "android.permission.VIBRATE"

[package.metadata.android.application]
icon = "@mipmap/icon"
label = "ethertia"

[package.metadata.android.application.activity]
orientation = "landscape"

[package.metadata.ios]
assets = ["../../assets/"]
build_targets = ["aarch64-apple-ios"]
dependencies = ["Metal.framework", "Security.framework", "UIKit.framework", "AudioToolbox.framework"]